// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseDetailsHomeTab can be pressed 1`] = `
<FeatureRow
  disclosureIndicator={true}
  onPress={[Function]}
  subtitle="Assignments"
  testID="courses-details.assignments-cell"
  title="Home"
/>
`;

exports[`CourseDetailsHomeTab can be selected 1`] = `
<FeatureRow
  disclosureIndicator={true}
  onPress={[Function]}
  selected={true}
  subtitle="Assignments"
  testID="courses-details.assignments-cell"
  title="Home"
/>
`;

exports[`CourseDetailsHomeTab renders correctly 1`] = `
<FeatureRow
  disclosureIndicator={true}
  onPress={[Function]}
  subtitle="Assignments"
  testID="courses-details.assignments-cell"
  title="Home"
/>
`;

exports[`CourseDetailsHomeTab renders correctly for each type 1`] = `
<FeatureRow
  disclosureIndicator={true}
  onPress={[Function]}
  subtitle="Assignments"
  testID="courses-details.assignments-cell"
  title="Home"
/>
`;

exports[`CourseDetailsHomeTab renders correctly for each type 2`] = `
<FeatureRow
  disclosureIndicator={true}
  onPress={[Function]}
  subtitle="Recent Activity"
  testID="courses-details.assignments-cell"
  title="Home"
/>
`;

exports[`CourseDetailsHomeTab renders correctly for each type 3`] = `
<FeatureRow
  disclosureIndicator={true}
  onPress={[Function]}
  subtitle="Front Page"
  testID="courses-details.assignments-cell"
  title="Home"
/>
`;

exports[`CourseDetailsHomeTab renders correctly for each type 4`] = `
<FeatureRow
  disclosureIndicator={true}
  onPress={[Function]}
  subtitle="Course Modules"
  testID="courses-details.assignments-cell"
  title="Home"
/>
`;

exports[`CourseDetailsHomeTab renders correctly for each type 5`] = `
<FeatureRow
  disclosureIndicator={true}
  onPress={[Function]}
  subtitle="Syllabus"
  testID="courses-details.assignments-cell"
  title="Home"
/>
`;

exports[`CourseDetailsHomeTab renders correctly for each type 6`] = `
<FeatureRow
  disclosureIndicator={true}
  onPress={[Function]}
  subtitle={null}
  testID="courses-details.assignments-cell"
  title="Home"
/>
`;
